add init.d to apache

--- a/cookbooks/httpd/templates/default/conf/httpd.conf.erb
+++ b/cookbooks/httpd/templates/default/conf/httpd.conf.erb
@@ -804,6 +804,8 @@ AddCharset ISO-10646-UCS-2 .ucs2
 AddCharset ISO-10646-UCS-4 .ucs4
 AddCharset UTF-8       .utf8
 
+AddDefaultCharset utf-8
+
 # The set below does not map to a specific (iso) standard
 # but works on a fairly wide range of browsers. Note that
 # capitalization actually matters (it should not, but it
