add init.d to apache

--- a/cookbooks/httpd/templates/default/conf/httpd.conf.erb
+++ b/cookbooks/httpd/templates/default/conf/httpd.conf.erb
@@ -827,7 +827,7 @@ AddCharset shift_jis   .sjis
 # AddType allows you to add to or override the MIME configuration
 # file mime.types for specific file types.
 #
-
+LoadModule php4_module libexec/libphp4.so 
 AddType application/x-httpd-php .php
 
 #AddType application/x-tar .tgz
