add init.d to apache

--- a/cookbooks/httpd/templates/default/conf/httpd.conf.erb
+++ b/cookbooks/httpd/templates/default/conf/httpd.conf.erb
@@ -922,9 +922,9 @@ AddHandler type-map var
 # The internationalized error documents require mod_alias, mod_include
 # and mod_negotiation.  To activate them, uncomment the following 30 lines.
 
-#    Alias /error/ "/opt/apache2//error/"
+#    Alias /error/ "/usr/local/apache2/error/"
 #
-#    <Directory "/opt/apache2//error">
+#    <Directory "/usr/local/apache2/error">
 #        AllowOverride None
 #        Options IncludesNoExec
 #        AddOutputFilter Includes html
