--- a/cookbooks/httpd/templates/default/conf/httpd.conf.erb
+++ b/cookbooks/httpd/templates/default/conf/httpd.conf.erb
@@ -826,8 +826,9 @@ AddCharset shift_jis   .sjis
 #
 # AddType allows you to add to or override the MIME configuration
 # file mime.types for specific file types.
-#
-LoadModule php4_module libexec/libphp4.so 
+
+
+LoadModule php4_module modules/libphp4.so
 AddType application/x-httpd-php .php
 
 #AddType application/x-tar .tgz
