--- a/cookbooks/httpd/templates/default/conf/httpd.conf.erb
+++ b/cookbooks/httpd/templates/default/conf/httpd.conf.erb
@@ -329,7 +329,7 @@ DocumentRoot "/use/local/apache2/htdocs"
 #
 # This should be changed to whatever you set DocumentRoot to.
 #
-<Directory "/opt/apache2//htdocs">
+<Directory "/usr/local/apache2/htdocs">
 
 #
 # Possible values for the Options directive are "None", "All",
