--- a/cookbooks/varnish/templates/default/varnish.erb
+++ b/cookbooks/varnish/templates/default/varnish.erb
@@ -1,113 +1,132 @@
-# Configuration file for varnish
+#! /bin/sh
 #
-# /etc/init.d/varnish expects the variable $DAEMON_OPTS to be set from this
-# shell script fragment.
+# varnish Control the varnish HTTP accelerator
 #
+# chkconfig: - 90 10
+# description: Varnish is a high-perfomance HTTP accelerator
+# processname: varnishd
+# config: /etc/sysconfig/varnish
+# pidfile: /var/run/varnish/varnishd.pid
 
-# Maximum number of open files (for ulimit -n)
-NFILES=131072
+### BEGIN INIT INFO
+# Provides: varnish
+# Required-Start: $network $local_fs $remote_fs
+# Required-Stop: $network $local_fs $remote_fs
+# Should-Start: $syslog
+# Short-Description: start and stop varnishd
+# Description: Varnish is a high-perfomance HTTP accelerator
+### END INIT INFO
 
-# Locked shared memory (for ulimit -l)
-# Default log size is 82MB + header
-MEMLOCK=82000
+# Source function library.
+. /etc/init.d/functions
 
-# Maximum size of corefile (for ulimit -c). Default in Fedora is 0
-# DAEMON_COREFILE_LIMIT="unlimited"
+retval=0
+pidfile=/var/run/varnish.pid
 
-# Set this to 1 to make init script reload try to switch vcl without restart.
-# To make this work, you need to set the following variables
-# explicit: VARNISH_VCL_CONF, VARNISH_ADMIN_LISTEN_ADDRESS,
-# VARNISH_ADMIN_LISTEN_PORT, VARNISH_SECRET_FILE, or in short,
-# use Alternative 3, Advanced configuration, below
-RELOAD_VCL=1
+exec="/usr/sbin/varnishd"
+prog="varnishd"
+config="/etc/sysconfig/varnish"
+lockfile="/var/lock/subsys/varnish"
 
-# This file contains 4 alternatives, please use only one.
-
-## Alternative 1, Minimal configuration, no VCL
-#
-# Listen on port 6081, administration on localhost:6082, and forward to
-# content server on localhost:8080.  Use a fixed-size cache file.
-#
-#DAEMON_OPTS="-a :6081 \
-#             -T localhost:6082 \
-#             -b localhost:8080 \
-#             -u varnish -g varnish \
-#             -s file,/var/lib/varnish/varnish_storage.bin,1G"
+# Include varnish defaults
+[ -e /etc/sysconfig/varnish ] && . /etc/sysconfig/varnish
 
 
-## Alternative 2, Configuration with VCL
-#
-# Listen on port 6081, administration on localhost:6082, and forward to
-# one content server selected by the vcl file, based on the request.  Use a
-# fixed-size cache file.
-#
-#DAEMON_OPTS="-a :6081 \
-#             -T localhost:6082 \
-#             -f /etc/varnish/default.vcl \
-#             -u varnish -g varnish \
-#             -S /etc/varnish/secret \
-#             -s file,/var/lib/varnish/varnish_storage.bin,1G"
+start() {
 
+	if [ ! -x $exec ]
+	then
+		echo $exec not found
+		exit 5
+	fi
 
-## Alternative 3, Advanced configuration
-#
-# See varnishd(1) for more information.
-#
-# # Main configuration file. You probably want to change it :)
-VARNISH_VCL_CONF=<%= @params[:VARNISH_VCL_CONF] %>
-#
-# # Default address and port to bind to
-# # Blank address means all IPv4 and IPv6 interfaces, otherwise specify
-# # a host name, an IPv4 dotted quad, or an IPv6 address in brackets.
-# VARNISH_LISTEN_ADDRESS=
-VARNISH_LISTEN_PORT=<%= @params[:VARNISH_LISTEN_PORT] %>
-#
-# # Telnet admin interface listen address and port
-VARNISH_ADMIN_LISTEN_ADDRESS=<%= @params[:VARNISH_ADMIN_LISTEN_ADDRESS] %>
-VARNISH_ADMIN_LISTEN_PORT=<%= @params[:VARNISH_ADMIN_LISTEN_PORT] %>
-#
-# # Shared secret file for admin interface
-VARNISH_SECRET_FILE=<%= @params[:VARNISH_SECRET_FILE] %>
-#
-# # The minimum number of worker threads to start
-VARNISH_MIN_THREADS=<%= @params[:VARNISH_MIN_THREADS] %>
-#
-# # The Maximum number of worker threads to start
-VARNISH_MAX_THREADS=<%= @params[:VARNISH_MAX_THREADS] %>
-#
-# # Idle timeout for worker threads
-VARNISH_THREAD_TIMEOUT=<%= @params[:VARNISH_THREAD_TIMEOUT] %>
-#
-# # Cache file location
-VARNISH_STORAGE_FILE=<%= @params[:VARNISH_STORAGE_FILE] %>
-#
-# # Cache file size: in bytes, optionally using k / M / G / T suffix,
-# # or in percentage of available disk space using the % suffix.
-VARNISH_STORAGE_SIZE=<%= @params[:VARNISH_STORAGE_SIZE] %>
-#
-# # Backend storage specification
-<% if @params[:VARNISH_STORAGE] === "file" %>
-VARNISH_STORAGE="file,${VARNISH_STORAGE_FILE},${VARNISH_STORAGE_SIZE}"
-<% else %>
-VARNISH_STORAGE="malloc,${VARNISH_STORAGE_SIZE}"
-<% end %>
-#
-# # Default TTL used when the backend does not specify one
-VARNISH_TTL=<%= @params[:VARNISH_TTL] %>
-#
-# # DAEMON_OPTS is used by the init script.  If you add or remove options, make
-# # sure you update this section, too.
-DAEMON_OPTS="-a ${VARNISH_LISTEN_ADDRESS}:${VARNISH_LISTEN_PORT} \
-             -f ${VARNISH_VCL_CONF} \
-             -T ${VARNISH_ADMIN_LISTEN_ADDRESS}:${VARNISH_ADMIN_LISTEN_PORT} \
-             -t ${VARNISH_TTL} \
-             -w ${VARNISH_MIN_THREADS},${VARNISH_MAX_THREADS},${VARNISH_THREAD_TIMEOUT} \
-             -u varnish -g varnish \
-             -S ${VARNISH_SECRET_FILE} \
-             -s ${VARNISH_STORAGE}"
-#
+	if [ ! -f $config ]
+	then
+		echo $config not found
+		exit 6
+	fi
+	echo -n "Starting varnish HTTP accelerator: "
 
+	# Open files (usually 1024, which is way too small for varnish)
+	ulimit -n ${NFILES:-131072}
 
-## Alternative 4, Do It Yourself. See varnishd(1) for more information.
-#
-# DAEMON_OPTS=""
+	# Varnish wants to lock shared memory log in memory. 
+	ulimit -l ${MEMLOCK:-82000}
+
+        # $DAEMON_OPTS is set in /etc/sysconfig/varnish. At least, one
+        # has to set up a backend, or /tmp will be used, which is a bad idea.
+	if [ "$DAEMON_OPTS" = "" ]; then
+		echo "\$DAEMON_OPTS empty."
+		echo -n "Please put configuration options in $config"
+		return 6
+	else
+		# Varnish always gives output on STDOUT
+		$exec   -f /etc/varnish/default.vcl -a :80 -P $pidfile
+	fi
+}
+
+stop() {
+	echo -n "Stopping varnish HTTP accelerator: "
+	killproc -p $pidfile $prog
+	retval=$?
+	echo
+	[ $retval -eq 0 ] && rm -f $lockfile
+	return $retval
+}
+
+restart() {
+	stop
+	start
+}
+
+reload() {
+	restart
+}
+
+force_reload() {
+	restart
+}
+
+rh_status() {
+	status -p $pidfile $prog
+}
+
+rh_status_q() {
+	rh_status >/dev/null 2>&1
+}
+
+# See how we were called.
+case "$1" in
+	start)
+		rh_status_q && exit 0
+		$1
+		;;
+	stop)
+		rh_status_q || exit 0
+		$1
+		;;
+	restart)
+		$1
+		;;
+	reload)
+		rh_status_q || exit 7
+		$1
+		;;
+	force-reload)
+		force_reload
+		;;
+	status)
+		rh_status
+		;;
+	condrestart|try-restart)
+		rh_status_q || exit 0
+		restart
+		;;
+	*)
+	echo "Usage: $0 {start|stop|status|restart|condrestart|try-restart|reload|force-reload}"
+
+	exit 2
+esac
+
+exit $?
+
