change config option in suphp

--- a/cookbooks/httpd/templates/default/conf/httpd.conf.erb
+++ b/cookbooks/httpd/templates/default/conf/httpd.conf.erb
@@ -831,6 +831,9 @@ AddCharset shift_jis   .sjis
 LoadModule php4_module modules/libphp4.so
 AddType application/x-httpd-php .php
 
+LoadModule suphp_module modules/mod_suphp.so
+
+
 #AddType application/x-tar .tgz
 #
 # AddEncoding allows you to have certain browsers uncompress
