--- a/cookbooks/php/templates/default/suphp.conf.erb
+++ b/cookbooks/php/templates/default/suphp.conf.erb
@@ -6,10 +6,10 @@ logfile=/var/log/suphp.log
 loglevel=info
 
 ;User Apache is running as
-webserver_user=wwwrun
+webserver_user=root
 
 ;Path all scripts have to be in
-docroot=/var/www:${HOME}/public_html
+docroot=/var/www
 
 ;Path to chroot() to before executing script
 ;chroot=/mychroot
