add postfix recipe

--- a/cookbooks/httpd/templates/default/conf/httpd.conf.erb
+++ b/cookbooks/httpd/templates/default/conf/httpd.conf.erb
@@ -1051,6 +1051,5 @@ NameVirtualHost *:8080
 	
     suPHP_Engine on
     suPHP_UserGroup www-data www-data
-    AddHandler x-httpd-php .php .php3 .php4
-    suPHP_AddHandler x-httpd-php
+    suPHP_AddHandler application/x-httpd-php
 </VirtualHost>
