add wordpress instalation

--- a/cookbooks/httpd/templates/default/conf/httpd.conf.erb
+++ b/cookbooks/httpd/templates/default/conf/httpd.conf.erb
@@ -1043,7 +1043,7 @@ NameVirtualHost *:8080
 #
 <VirtualHost *:8080>
     ServerAdmin webmaster@websitemigrations.com
-    DocumentRoot /var/www/
+    DocumentRoot /var/www/websitemigrations.com
     ServerName websitemigrations.com
 	serverAlias www.websitemigrations.com
     ErrorLog /var/log/apache-websitemigrations.com-error_log
