--- a/cookbooks/iptables/templates/default/iptables.erb
+++ b/cookbooks/iptables/templates/default/iptables.erb
@@ -10,9 +10,12 @@
 -A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
 -A INPUT -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT
 -A INPUT -m state --state NEW -m tcp -p tcp --dport 443 -j ACCEPT
+-A INPUT -m state --state NEW -m tcp -p tcp --dport 25 -j ACCEPT
+-A INPUT -m state --state NEW -m tcp -p tcp --dport 110 -j ACCEPT
+
 -A INPUT -m state --state NEW -m tcp  -s 204.232.241.45/32 -p tcp --dport 20 -j ACCEPT
 -A INPUT -m state --state NEW -m tcp  -s 204.232.241.45/32 -p tcp --dport 21 -j ACCEPT
 
-#-A INPUT -j REJECT --reject-with icmp-host-prohibited
-#-A FORWARD -j REJECT --reject-with icmp-host-prohibited
+-A INPUT -j REJECT --reject-with icmp-host-prohibited
+-A FORWARD -j REJECT --reject-with icmp-host-prohibited
 COMMIT
